# zed

./: Cargo.toml
crates/agent_ui/: Cargo.toml
crates/agent_ui/src/: agent_panel.rs
crates/agent_ui/src/conversation_view/: thread_view.rs
crates/dev_panel/: Cargo.toml
crates/dev_panel/src/: classification.rs  detection.rs  dev_panel.rs  parsers.rs
crates/dictation/: Cargo.toml
crates/dictation/src/: dictation.rs
crates/git_ui/src/: branch_name_prompt.txt  git_panel.rs
crates/language_models/src/: language_models.rs
crates/language_models/src/provider/: google.rs
crates/terminal_view/: Cargo.toml
crates/terminal_view/src/: terminal_panel.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
