[package]
name = "dev_panel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/dev_panel.rs"

[dependencies]
anyhow.workspace = true
collections.workspace = true
gpui.workspace = true
project.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_lenient.workspace = true
serde_yaml.workspace = true
task.workspace = true
terminal.workspace = true
terminal_view.workspace = true
toml.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
