[package]
name = "dictation"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/dictation.rs"

[dependencies]
anyhow.workspace = true
async-fs.workspace = true
futures.workspace = true
http_client.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
tempfile.workspace = true
util.workspace = true
